Revert "Revert "More editor and layout bugs fixed""
This reverts commit daec6b047906999dfbfc3029c1e04af470659b6e.

--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ h1 {
 	
 	font-size: 10em;
 	padding: 0;
-	margin: 0 0 -.2em 0;
+	margin: 0;
 	color: #ff0000;
 	text-shadow: 0 0 10px #000;
 }
@@ -333,7 +333,7 @@ div.block {
 
 div.buttonRows {
 	
-	margin-top: 3em;
+	margin-top: 1em;
 }
 
 a.menuButton:hover, a.menuButton.active,
